<resources>
    <string name="app_name">Пятнашки</string>
    <string name="new_game">Новая игра</string>
    <string name="pause_game">Пауза</string>
    <string name="continue_game">Продолжить</string>
    <string name="stats_game">Статистика</string>
    <string name="stats_load_game">Загрузка статистики…</string>
    <string name="stats_back_game">Назад</string>
    <string name="stats_reset">Сбросить статистику</string>
    <string name="stats_empty">Статистика пуста</string>
</resources>
