<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Кнопка "Статистика" сверху -->
    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_game"
        android:layout_marginBottom="16dp"/>

    <!-- Контейнер для кнопок "Новая игра" и "Пауза" -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_game"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause_game"/>
    </LinearLayout>

</LinearLayout>
